--- a/pages/hdbm/hdbm.wxml
+++ b/pages/hdbm/hdbm.wxml
@@ -11,10 +11,11 @@
       <view class='activity_name'>活动主题：{{item.evenName}}</view>
       <view class='activity_time'>活动时间：<text style="color:#01b8ab;">{{item.startTime}}至{{item.endTime}}</text></view>
       <view class='activity_sm'>
-        <view class="classname1">活动说明：{{item.eventDesc}}
-         <text wx:if="{{item.isNotic=='1'}}" style='color:#01b8ab' data-noticDesc='{{item.noticDesc}}' 
+        <view class="classname1">
+                 <text wx:if="{{item.isNotic=='1'}}" style='color:#01b8ab' data-noticDesc='{{item.noticDesc}}' 
          data-noticStartTime='{{item.noticStartTime}}' data-noticEndTime='{{item.noticEndTime}}'data-noticAddress='{{item.noticAddress}}' bindtap='tzgg'>新的 <text class='tzgg'>《活动通知公告》</text></text>
                 <text wx:if="{{item.isNotic=='0'}}"></text>
+        <text bindtap='show_gg' data-noticStartTime='{{item.eventDesc}}'>活动说明：{{item.eventDesc}}</text>
          </view>
         <view class="classname2" bindtap="bm" data-eventId="{{item.eventId}}">
          <button wx:if="{{item.bmState==null}}">报名</button> 
