--- a/pages/hdbm/hdbm.wxss
+++ b/pages/hdbm/hdbm.wxss
@@ -53,6 +53,11 @@ button {
 
 .classname1 {
   margin-left: 20rpx;
+      word-break: break-all;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
 }
 .img_tip{
   display: flex;
