--- a/pages/xfmx/xfmx.wxss
+++ b/pages/xfmx/xfmx.wxss
@@ -76,8 +76,8 @@ page{
   color: #838384;
   margin-left: 120rpx;
   margin-top: 23rpx;
-  font-weight: bold;
-  font-size: 33rpx;
+  /* font-weight: bold; */
+  font-size: 30rpx;
 }
 .status{
   position: absolute;
@@ -108,22 +108,22 @@ page{
 
 .contents_list{
   border-top: 1px solid  #EEEEEE;
-  height: 100rpx;
+  height: 80rpx;
   width: 90%;
   margin-left: 5%;
-  line-height: 100rpx;
+  line-height:80rpx;
 }
 .list_name{
-  font-size: 34rpx;
+  font-size: 30rpx;
   color:  #b4b4b4;
   /* font-weight: bold; */
   margin-left: 10rpx;
 }
 .name_content{
- font-size: 34rpx;
+ font-size: 30rpx;
  color:  #b4b4b4;
  margin-left: 60rpx;
- font-weight: bold;
+ /* font-weight: bold; */
 }
 
 
