--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -4,7 +4,7 @@
     <image class="remind-img" src="../images/index/loading.gif"></image>
   </view>
   <block wx:else>
-    <image class="title" src="../images/more/title.png"></image>
+    <image class="title" src="../images/lo5.png" style='border:0px solid red'></image>
     <view class="content">
       <view class="hd" style="transform:rotateZ({{angle}}deg);">
         <image class="logo" src="../images/more/eu1.png"></image>
